[package] 
name = "hcms-29xx"
version = "0.1.0"
edition = "2021"
authors = ["Nick Brown <nick@altonimb.us>"]
categories = ["embedded", "no-std"]
description = "Platform agnostic driver for HCMS-29XX and HCMS-39XX display ICs"
keywords = ["embedded-hal-driver", "no-std"]
license = "MIT"
repository = "https://github.com/nonik0/hcms-29xx"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
avr-progmem = { version = "0.4.0", optional = true }