[workspace]
members = [
    "examples/arduino-uno",
    "examples/esp32s3",
]

[package]
name = "hcms-29xx"
version = "0.1.0"
edition = "2021"
authors = ["Nick Brown <nick@altonimb.us>"]
categories = ["embedded", "no-std"]
description = "Platform agnostic driver for HCMS-29XX and HCMS-39XX display ICs"
keywords = ["embedded-hal-driver", "no-std"]
license = "MIT"
repository = "https://github.com/nonik0/hcms-29xx"
readme = "README.md"
autobins = false # needed to override for examples with own manifest files

[dependencies]
embedded-hal = "1.0.0"
avr-progmem = { version = "0.4.0", optional = true }

[[example]]
name = "arduino-uno"
path = "examples/arduino-uno"

[[example]]
name = "esp32s3"
path = "examples/esp32s3"   

[profile.dev]
opt-level = "s"

#[profile.release]
#codegen-units    = 1
#debug            = 2
#debug-assertions = false
#incremental      = false
#lto              = 'fat'
#opt-level        = 's'
#overflow-checks  = false
