[package]
name    = "arduino-uno"
version = "0.1.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"
panic = "abort"

[[bin]]
name = "arduino-uno"
#test = false
#bench = false

[dependencies]
bitflags = "2.8.0"
embedded-hal = "1.0"
hcms-29xx = { path = "../.." }
nb = "1.1.0"
panic-halt = "1.0.0"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4"
features = ["arduino-uno"]

[build-dependencies.proc-macro2]
version = "=1.0.79"