[package]
name    = "esp32-c3"
version = "0.0.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"

[[bin]]
name = "esp32-c3"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c3", "log-04"] }
esp-println            = { version = "0.15.0", features = ["esp32c3", "log-04"] }
hcms-29xx              = { path = "../..", features = ["print_float"]}
log                    = "0.4.27"
