[package]
name    = "esp32-s3"
version = "0.0.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"

[[bin]]
name = "esp32-s3"
path = "src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
hcms-29xx = { path = "../.." }
log = { version = "0.4.21" }

