[package]
edition = "2021"
name    = "esp32s3"
version = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }

[dependencies.hcms-29xx]
path = "../.."
